--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
             <version>2.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.0.17.Final</version>
+        </dependency>
+
 <!--        end hibernate-->
 
     </dependencies>
