--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
             <version>6.0.17.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>2.1.10.RELEASE</version>
+        </dependency>
+
 <!--        end hibernate-->
 
     </dependencies>
